--- a/LDA_paper/.project
+++ b/LDA_paper/.project
@@ -16,7 +16,7 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>references.bib</name>
+			<name>bib.bib</name>
 			<type>1</type>
 			<location>C:/Program Files (x86)/MiKTeX 2.9/bibtex/bib/feupphdteses/References.bib</location>
 		</link>
