--- a/LDA_paper/.gitignore
+++ b/LDA_paper/.gitignore
@@ -9,3 +9,13 @@
 /document.run.xml
 /document.dvi
 /document.out
+/texput.log
+/vldb.log
+/TexMaker.aux
+/TexMaker.bbl
+/TexMaker.bcf
+/TexMaker.blg
+/TexMaker.dvi
+/TexMaker.log
+/TexMaker.out
+/TexMaker.run.xml
